新增 程序启动类的注解使用、不同环境配置、不同配置类使用

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.profiles.active=dev
+gazelle.config.name=little bear
+gazelle.config.title=Spring Demo
 
+
+gazelle.other.sex=male
+gazelle.other.age=23
+gazelle.other.worked=true
